added scroll to top button, started working on pagination logic

--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
+      crossorigin="anonymous"
     />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
+      crossorigin="anonymous"
     />
   </head>
 
@@ -55,5 +57,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="https://use.fontawesome.com/b60498fb10.js"></script>
   </body>
 </html>
