added redirect time delay and splash page for redirect

--- a/src/index.html
+++ b/src/index.html
@@ -58,5 +58,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://use.fontawesome.com/b60498fb10.js"></script>
+    <script src="/assets/javascript/countdownTimer.js"></script>
   </body>
 </html>
