--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,10 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="https://use.fontawesome.com/b60498fb10.js"></script>
+    <script
+      src="https://use.fontawesome.com/b60498fb10.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="/assets/javascript/countdownTimer.js"></script>
   </body>
 </html>
