--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,18 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5134980856971407"
       crossorigin="anonymous"
     ></script>
+    <script
+      data-name="BMC-Widget"
+      data-cfasync="false"
+      src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+      data-id="kylewheeless"
+      data-description="Support me on Buy me a coffee!"
+      data-message="Thank you so much for visiting, you can now buy me a cup of coffee with this awesome widget!"
+      data-color="#5F7FFF"
+      data-position="left"
+      data-x_margin="18"
+      data-y_margin="18"
+    ></script>
   </head>
 
   <body>
