RxJS version update and title update

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>HostMio by HostMonkey</title>
+    <title>HostMio</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -83,7 +83,9 @@
     <script src="/assets/javascript/countdownTimer.js"></script>
 
     <noscript
-      >Please enable JavaScript to continue using this application.</noscript
+      >Please enable JavaScript to continue using this application. Not quite
+      sure why you have is disabled unless you are a bot, a CRUD tool, or just a
+      tool in general.</noscript
     >
   </body>
 </html>
