added Cache-Control header

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>HostMio</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Cache-Control" content="max-age=86400, must-revalidate" />
 
     <link
       rel="apple-touch-icon"
