added meta data

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,44 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Cache-Control" content="max-age=86400, must-revalidate" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      name="description"
+      content="HostMio is a platform for shortening links, hosting your own website or app (future release), and marketing with your own shortUrl handle"
+    />
+    <meta
+      name="keywords"
+      content="HostMio, shortUrl, shortening, short, url, link, hosting, website, app, marketing, platform, shortUrl, shortening, short, url, link, hosting, website, app, marketing, platform"
+    />
+    <meta name="author" content="HostMio" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="revisit-after" content="1 day" />
+    <meta name="rating" content="general" />
+    <meta name="distribution" content="global" />
+    <meta name="copyright" content="HostMio" />
+    <meta name="language" content="en" />
+    <meta name="doc-type" content="Web Page" />
+    <meta name="doc-class" content="Completed" />
+    <meta name="doc-rights" content="Public" />
+    <meta name="doc-rating" content="Safe for Kids" />
+    <meta name="doc-distribution" content="Global" />
+    <meta name="doc-copyright" content="HostMio" />
+    <meta name="doc-language" content="en" />
+    <meta name="doc-author" content="HostMio" />
+    <meta name="doc-publisher" content="HostMio" />
+    <meta name="doc-classification" content="ShortUrl" />
+    <meta name="doc-identifier" content="HostMio" />
+    <meta name="doc-subject" content="HostMio" />
+    <meta
+      name="doc-description"
+      content="HostMio is a platform for shortening links, hosting your own website or app (future release), and marketing with your own shortUrl handle"
+    />
+    <meta
+      name="doc-keywords"
+      content="HostMio, shortUrl, shortening, short, url, link, hosting, website, app, marketing, platform, shortUrl, shortening, short, url, link, hosting, website, app, marketing, platform"
+    />
+    <meta name="doc-coverage" content="Worldwide" />
 
     <link
       rel="apple-touch-icon"
