added more meta data

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,36 @@
       name="keywords"
       content="HostMio, shortUrl, shortening, short, url, link, hosting, website, app, marketing, platform, shortUrl, shortening, short, url, link, hosting, website, app, marketing, platform"
     />
+    <meta
+      property="og:title"
+      content="HostMio - Link Shortening as a Service"
+    />
+    <meta
+      property="og:description"
+      content="HostMio is a platform for shortening links, hosting your own website or app (future release), and marketing with your own shortUrl handle"
+    />
+
+    <meta
+      property="og:image"
+      content="https://hostm.io/assets/img/hostmio-logo.png"
+    />
+    <meta property="og:url" content="https://hostm.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="HostMio" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:alt" content="HostMio" />
+    <meta
+      property="og:image:secure_url"
+      content="https://hostm.io/assets/img/hostmio-logo.png"
+    />
+    <meta
+      property="og:description"
+      content="HostMio is a platform for shortening links, hosting your own website or app (future release), and marketing with your own shortUrl handle"
+    />
     <meta name="author" content="HostMio" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
