add some extra social links, removed resolver on link details, added message for failing to extend expire date

--- a/src/index.html
+++ b/src/index.html
@@ -149,6 +149,12 @@
       src="https://use.fontawesome.com/b60498fb10.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://platform.linkedin.com/badges/js/profile.js"
+      async
+      defer
+      type="text/javascript"
+    ></script>
     <script src="/assets/javascript/countdownTimer.js"></script>
 
     <noscript
